started final section

--- a/cnn-demonstration.ipynb
+++ b/cnn-demonstration.ipynb
@@ -2,20 +2,109 @@
     "cells": [
         {
             "cell_type": "code",
-            "execution_count": 1,
+            "execution_count": 5,
             "source": [
-                "from cnn import model"
+                "import torch\n",
+                "\n",
+                "from cnn.utils import *\n",
+                "from cnn.train import train\n",
+                "from cnn.model import generate_model_by_name"
+            ],
+            "outputs": [],
+            "metadata": {}
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 2,
+            "source": [
+                "default_fashion_mnist_convnet = generate_model_by_name(\n",
+                "    num_classes=10, input_size=[1, 28, 28], name=\"default\"\n",
+                ")\n",
+                "print(default_fashion_mnist_convnet)\n",
+                "default_fashion_mnist_convnet(torch.randn(64, 1, 28, 28)).shape"
             ],
             "outputs": [
                 {
+                    "output_type": "stream",
+                    "name": "stdout",
+                    "text": [
+                        "ConvNN(\n",
+                        "  (convolutional_layers): Sequential(\n",
+                        "    (0): Conv2d(1, 6, kernel_size=(5, 5), stride=(1, 1))\n",
+                        "    (1): ReluLayer()\n",
+                        "    (2): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
+                        "    (3): Conv2d(6, 16, kernel_size=(5, 5), stride=(1, 1))\n",
+                        "    (4): ReluLayer()\n",
+                        "    (5): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
+                        "  )\n",
+                        "  (flatten): FlattenLayer()\n",
+                        "  (fc_layers): Sequential(\n",
+                        "    (0): Linear(in_features=256, out_features=120, bias=True)\n",
+                        "    (1): Linear(in_features=120, out_features=84, bias=True)\n",
+                        "    (2): ReluLayer()\n",
+                        "    (3): Linear(in_features=84, out_features=10, bias=True)\n",
+                        "  )\n",
+                        ")\n"
+                    ]
+                },
+                {
+                    "output_type": "execute_result",
+                    "data": {
+                        "text/plain": [
+                            "torch.Size([64, 10])"
+                        ]
+                    },
+                    "metadata": {},
+                    "execution_count": 2
+                }
+            ],
+            "metadata": {}
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 12,
+            "source": [
+                "train_data = torch.randn(60000, 1, 28, 28)\n",
+                "eval_data = torch.randn(10000, 1, 28, 28)\n",
+                "train_labels = torch.randint(0, 10, [60000])\n",
+                "eval_labels = torch.randint(0, 10, [10000])\n",
+                "\n",
+                "train_dataset = SimpleImageDataset(train_data, train_labels)\n",
+                "eval_dataset = SimpleImageDataset(eval_data, eval_labels)\n",
+                "\n",
+                "train_dataloader = torch.utils.data.DataLoader(train_dataset, collate_fn=coll_fn, batch_size=32, shuffle=True)\n",
+                "eval_dataloader = torch.utils.data.DataLoader(eval_dataset, collate_fn=coll_fn, batch_size=32)"
+            ],
+            "outputs": [],
+            "metadata": {}
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 34,
+            "source": [
+                "import time\n",
+                "\n",
+                "waittimes = (abs(5*torch.randn(700)).int() + 5).cpu().numpy()\n",
+                "for wtime in waittimes:\n",
+                "    for t in list(range(wtime))[::-1]:\n",
+                "        print(f\"Next image in {t}\", end='\\r')\n",
+                "        time.sleep(1)"
+            ],
+            "outputs": [
+                {
+                    "output_type": "stream",
+                    "name": "stdout",
+                    "text": []
+                },
+                {
                     "output_type": "error",
-                    "ename": "SyntaxError",
-                    "evalue": "invalid syntax (model.py, line 13)",
+                    "ename": "KeyboardInterrupt",
+                    "evalue": "",
                     "traceback": [
-                        "Traceback \u001b[0;36m(most recent call last)\u001b[0m:\n",
-                        "  File \u001b[1;32m\"/opt/anaconda3/envs/container/lib/python3.8/site-packages/IPython/core/interactiveshell.py\"\u001b[0m, line \u001b[1;32m3441\u001b[0m, in \u001b[1;35mrun_code\u001b[0m\n    exec(code_obj, self.user_global_ns, self.user_ns)\n",
-                        "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-1-ff84749b4688>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0;36m, in \u001b[0;35m<module>\u001b[0;36m\u001b[0m\n\u001b[0;31m    from cnn import model\u001b[0m\n",
-                        "\u001b[0;36m  File \u001b[0;32m\"/Users/puriaradmard/Documents/GitHub/vectorai.2021/cnn/model.py\"\u001b[0;36m, line \u001b[0;32m13\u001b[0m\n\u001b[0;31m    def ConvNN(nn.Module):\u001b[0m\n\u001b[0m                 ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+                        "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+                        "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+                        "\u001b[0;32m<ipython-input-34-548c36a6c42f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mt\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mwtime\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf\"Next image in {t}\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mend\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'\\r'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m         \u001b[0mtime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msleep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m13\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+                        "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
                     ]
                 }
             ],
@@ -23,9 +112,50 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
-            "source": [],
-            "outputs": [],
+            "execution_count": 4,
+            "source": [
+                "criterion = torch.nn.CrossEntropyLoss()\n",
+                "optimizer = torch.optim.Adam(default_fashion_mnist_convnet.parameters())\n",
+                "\n",
+                "dummy_model = train(default_fashion_mnist_convnet, criterion, optimizer, train_dataloader, eval_dataloader, 1)"
+            ],
+            "outputs": [
+                {
+                    "output_type": "stream",
+                    "name": "stderr",
+                    "text": [
+                        "1875it [00:10, 173.87it/s]\n"
+                    ]
+                },
+                {
+                    "output_type": "stream",
+                    "name": "stdout",
+                    "text": [
+                        "Epoch 0: train loss 0.07197631508111954, train accuracy 0.09971666666666666\n"
+                    ]
+                },
+                {
+                    "output_type": "stream",
+                    "name": "stderr",
+                    "text": [
+                        "313it [00:00, 427.49it/s]"
+                    ]
+                },
+                {
+                    "output_type": "stream",
+                    "name": "stdout",
+                    "text": [
+                        "Epoch 0: test loss 0.07208316776752471, test accuracy 0.0981\n"
+                    ]
+                },
+                {
+                    "output_type": "stream",
+                    "name": "stderr",
+                    "text": [
+                        "\n"
+                    ]
+                }
+            ],
             "metadata": {}
         }
     ],
