--- a/api-demonstration.ipynb
+++ b/api-demonstration.ipynb
@@ -111,7 +111,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 24,
+            "execution_count": 5,
             "source": [
                 "# Multiple topics with each config object\n",
                 "producer.create_topic(\"lunch\")\n",
@@ -122,7 +122,6 @@
                     "output_type": "stream",
                     "name": "stdout",
                     "text": [
-                        "Already a topic named lunch!\n",
                         "Caught: [Error 36] TopicAlreadyExistsError: Request 'CreateTopicsRequest_v3(create_topic_requests=[(topic='lunch', num_partitions=1, replication_factor=1, replica_assignment=[], configs=[])], timeout=30000, validate_only=False)' failed with response 'CreateTopicsResponse_v3(throttle_time_ms=0, topic_errors=[(topic='lunch', error_code=36, error_message=\"Topic 'lunch' already exists.\")])'.\n",
                         "Topic added anyway\n",
                         "Sent message to lunch\n"
@@ -133,7 +132,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 8,
             "source": [
                 "# \n",
                 "consumer = Consumer(config)\n",
@@ -144,12 +143,20 @@
                 "\n",
                 "print(message)"
             ],
-            "outputs": [],
+            "outputs": [
+                {
+                    "output_type": "stream",
+                    "name": "stdout",
+                    "text": [
+                        "None\n"
+                    ]
+                }
+            ],
             "metadata": {}
         },
         {
             "cell_type": "code",
-            "execution_count": 36,
+            "execution_count": 15,
             "source": [
                 "# Start lisening to a topic\n",
                 "consumer.start_listening('lunch')\n",
@@ -165,16 +172,24 @@
                     "output_type": "stream",
                     "name": "stdout",
                     "text": [
+                        "Already a topic named lunch!\n",
+                        "Started collecting in self.message_bank[lunch]\n",
                         "Sent message to lunch\n",
-                        "b'\"Grilled turkey + cheese. Yum! 15:04:04.246931\"'\n",
+                        "b'\"Grilled turkey + cheese. Yum! 16:03:16.273632\"'\n",
                         "Sent message to lunch\n",
-                        "b'\"Grilled turkey + cheese. Yum! 15:04:08.257821\"'\n",
-                        "Sent message to lunch\n",
-                        "b'\"Grilled turkey + cheese. Yum! 15:04:12.271664\"'\n",
-                        "Sent message to lunch\n",
-                        "b'\"Grilled turkey + cheese. Yum! 15:04:16.283283\"'\n",
-                        "Sent message to lunch\n",
-                        "b'\"Grilled turkey + cheese. Yum! 15:04:20.292557\"'\n"
+                        "b'\"Grilled turkey + cheese. Yum! 16:03:22.287039\"'\n",
+                        "Sent message to lunch\n"
+                    ]
+                },
+                {
+                    "output_type": "error",
+                    "ename": "KeyboardInterrupt",
+                    "evalue": "",
+                    "traceback": [
+                        "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+                        "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+                        "\u001b[0;32m<ipython-input-15-8e32fb78831a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0mproducer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msend_message\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf\"Grilled turkey + cheese. Yum! {datetime.now().time()}\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"lunch\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m     \u001b[0mtime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msleep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mconsumer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmessage_bank\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'lunch'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m     \u001b[0mtime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msleep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+                        "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
                     ]
                 }
             ],
